backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notes-backend

  strategy:
    type: Recreate

  template:

    metadata:
      labels:
        app: notes-backend

    spec:

      containers:

      - name: backend

        image: notes-backend:v7

        imagePullPolicy: Never

        ports:
        - containerPort: 3000
