frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notes-frontend

  template:

    metadata:
      labels:
        app: notes-frontend

    spec:

      containers:

      - name: notes-frontend

        image: notes-frontend:v3
        imagePullPolicy: Never

        ports:
        - containerPort: 3000
