backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: notes-backend

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
