frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:

  selector:
    app: notes-frontend

  ports:

  - port: 80

    targetPort: 3000

  type: ClusterIP
